--- a/src/page/product-details/ProductDetails.css
+++ b/src/page/product-details/ProductDetails.css
@@ -4,9 +4,9 @@
     margin: 0;
 }
 
-.concat{
+/* .concat{
     display: flex;
-}
+} */
 
 body, span{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -131,8 +131,7 @@ ul{
 }
 .sanpham .khoiphai .dk p{
     font-size: 12px;
-    line-height: 30px;
-   
+    line-height: 30px;   
     border-top: 1px solid rgb(102, 102, 102);
 }
 .sanpham .khoiphai .dk button{
