connect database and operation with database

--- a/src/page/cart-page/Delivery.css
+++ b/src/page/cart-page/Delivery.css
@@ -19,7 +19,8 @@ ul{
 
 /* Form đăng kí */
 .container-form-dang-ki {
-    background-color: #ddd;    
+    background-color: #ddd;
+    padding-bottom: 20px;
 }
 
 .form-dang-ki{
