--- a/src/page/product-details/ProductDetails.css
+++ b/src/page/product-details/ProductDetails.css
@@ -4,9 +4,9 @@
     margin: 0;
 }
 
-/* .concat{
+.concat{
     display: flex;
-} */
+}
 
 body, span{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
