--- a/src/page/ware-house/WareHouse.css
+++ b/src/page/ware-house/WareHouse.css
@@ -4,438 +4,26 @@
     margin: 0;
 }
 
-body, span{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 body {
     background-color: #FFFFFF;    
 }
 
 a{
-    text-decoration: none;
-    color: white;
+    text-decoration: none;    
 }
 
 ul{
     list-style: none;
 }
 
-/* San pham */
-.container-left{
-    top: 23%;
-    float: left;
-    width: 30%;
-    text-align: center;   
-    margin-bottom: 10%;
+.container-warehouse {
+    display: grid;    
+    grid-template-columns: 0.9fr 4fr;
 }
 
-.container-left .title-them-sp{
-    color: black;
-    margin-top: 40px;
-    margin-bottom: 10px;
-}
 
-.container-left .title-sua-sp{
-    color: black;
-    margin-top: 40px;
-    margin-bottom: 10px;
-}
 
-.container-left .form-them-sp label, input{
-    color: #333333;
-    /* font-weight: 500; */
-    display: block;
-    padding: 10px 0px;
-    width: 80%;
-    margin-left: 10px;
-    margin: auto;
-    text-align: left;
-}
 
-.container-left #pop-up-sua-san-pham input{
-    color: #333333;
-    font-weight: 500;
-    display: block;
-    padding: 10px 10px;
-    width: 90%;
-    margin-left: 10px;
-    margin: auto;
-    text-align: left;
-}
-
-.container-left #pop-up-sua-san-pham label{
-    color: #333333;
-    font-weight: 500;
-    display: block;
-    padding: 15px 0 10px 22px;
-    margin: auto;
-    text-align: left;
-}
-
-.container-left #pop-up-sua-san-pham button{
-    width: 40%;
-    padding: 10px 0;
-    margin-top: 30px;
-    margin-left: -4px;
-    margin-bottom: 50px;
-    background-color: #C89979;
-    border: 0;
-    color: white;
-    font-weight: 600;
-    font-size: 16px;
-    border-radius: 3px;
-}
-
-.container-left #pop-up-sua-san-pham #btn-pop-up-sua-san-pham{
-    width: 20%;
-    padding: 10px 0;
-    margin-top: 30px;
-    margin-left: 10px;
-    margin-bottom: 50px;
-    background-color: #FAFAFA;
-    border: 1px solid #C89979;
-    color: #C89979;
-    font-weight: 500;
-    font-size: 16px;
-    border-radius: 3px;
-}
-
-.container-left #pop-up-sua-san-pham #btn-pop-up-sua-san-pham:hover{
-    cursor: pointer;
-    background-color: #ddd;
-    border: 1px solid #ddd;
-}
-
-.container-left input{
-    color: black;
-    border-radius: 3px;
-    border: 1px solid #333333;
-    padding: 10px 10px;
-}
-
-.container-left input:focus{
-    border: 1px solid #ddd;
-    box-shadow: 0 0 3px #333333;
-    outline: none;
-}
-
-.container-left button{
-    width: 80%;
-    padding: 10px 0;
-    margin-top: 30px;
-    margin-bottom: 50px;
-    background-color: #C89979;
-    border: 0;
-    color: white;
-    font-weight: 600;
-    font-size: 16px;
-    border-radius: 3px;
-}
-
-.container-left button:hover{
-    background-color: #997157;
-    cursor: pointer;
-    transition-duration: 0.8s;
-}
-
-.container-left button:focus{
-    border: 0;
-    outline: none;
-}
-
-#pop-up-sua-san-pham{
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    z-index: 10000;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-    padding-top: 6%;
-}
-
-#pop-up-sua-san-pham .form-sua-sp{
-    position: relative;
-    background-color: #FAFAFA;
-    padding: 15px;
-    margin: auto;
-    width: 30%;
-    border-radius: 3px;
-}
-
-#pop-up-sua-san-pham .btn-cap-nhat-san-pham-sua:hover{
-    background-color: #997157;
-    transition-duration: 0.8s;
-}
-
-/* Container right */
-.container-chung{
-    background-color: #FFFFFF;
-    height: 800px;
-    margin-bottom: 30px;
-}
-.container-right{
-    height: 800px;
-    float: right;
-    width: 70%;
-    border-left: 1px solid #333333;      
-}
-
-.tim-kiem-sp{
-    display: flex;
-    width: 500px;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    margin-left: 22%;
-}
-
-.container-right .tim-kiem-sp input{
-    width: 70%;
-    border: 1px solid #ddd;
-    color: black;
-    border-radius: 3px 0 0 3px;
-    font-weight: 540;
-    padding: 11px 10px;
-    font-weight: 400;
-}
-
-.container-right .tim-kiem-sp input:focus{
-    border: 1px solid #ddd;
-    outline: none;
-    box-shadow: 0px 7px 16px 0px rgb(50 50 50 / 10%);
-}
-
-.container-right .tim-kiem-sp button:hover{
-    background-color: #997157;
-    transition-duration: 0.8s;
-    cursor: pointer;
-}
-
-.container-right .tim-kiem-sp button{
-    background-color: #C89979;
-    width: 10%;
-    margin-left: -105px;
-    border: 0;
-    color: white;
-    font-weight: 600;
-    border-radius: 0 3px 3px 0;
-}
-
-.container-right .tim-kiem-sp .fa-search{
-    font-size: 16px;
-}
-
-.container-right .dssp-trong-kho{
-    padding: 20px 0;
-}
-
-.container-right #danh-sach-sp .san-pham:hover{
-    cursor: pointer;
-    box-shadow: 0 0 3px #b1aeae;        
-}
-
-.container-right .sap-xep-san-pham{
-    margin-left: 53px;
-}
-
-.container-right .sap-xep-san-pham button{
-    padding: 10px 27px;
-    background-color: #C89979;
-    border: 0;
-    color: white;
-    font-size: 14px;
-    font-weight: 550;
-    margin: 20px 0;
-    border-radius: 3px;
-}
-
-.container-right .sap-xep-san-pham button:hover{
-    background-color: #997157;
-    transition-duration: 0.8s;
-    cursor: pointer;
-}
-
-.container-right .sap-xep-san-pham button:focus{
-    border: 0;
-    outline: none;
-}
-
-.container-right .sap-xep-san-pham .button-2{
-    margin-left: 40px;
-}
-
-.container-right .sap-xep-san-pham .button-3{
-    margin-left: 42px;
-}
-
-.container-right .tim-kiem-sp button:focus{
-    border: 0;
-    outline: none;
-}
-
-.thong-bao-khong-tim-thay{
-    text-align: center;
-    align-items: center;
-    margin-top: 150px;
-    font-weight: 400;
-}
-
-/* Danh sách sản phẩm */
-#danh-sach-sp{
-    max-width: 1100px;        
-    text-align: left;    
-    margin-left: 30px;
-}
-
-#danh-sach-sp .san-pham{
-    text-align: center;
-    width: 27%;
-    border: 0;    
-    margin: 20px 25px;
-    display: inline-block;
-    border-radius: 2px;    
-    max-height: 500px;
-    height: auto;
-    vertical-align: top;    
-}
-
-#danh-sach-sp .anh-sp img{
-    width: auto;
-    height: auto;
-    width: 90%;
-    
-}
-
-#danh-sach-sp .anh-sp{
-    width: 100%;
-    padding: 30px 10px;
-    margin: auto;
-    height: 280px;
-    text-align: center;
-}
-
-#danh-sach-sp .thong-tin-sp{    
-    text-align: center;
-    padding: 20px 0;
-}
-
-.san-pham .ten-sp{
-    color: #333;
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 400;
-    margin-bottom: 5px;
-    max-width: 90%;
-    margin: auto;
-    word-wrap: break-word; 
-}
-
-.san-pham .hang-sp{
-    font-size: 14px;
-    font-weight: 360;
-    margin-top: 10px;
-}
-
-.san-pham .gia-sp{
-    color: rgb(99, 93, 93);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 17px;
-    padding: 12px 0;
-}
-
-.san-pham .gia-sp span{
-    color: rgb(71, 71, 71);
-    font-size: 12px;
-    font-weight: 300;
-    padding-top: -10px;
-}
-
-.san-pham .fas{
-    color: #C89979;
-    float: right;
-    padding: 20px 20px 10px 0;    
-}
-
-.san-pham .fas:hover{
-    color: #997157;
-    cursor: pointer;
-    transition-duration: 0.2s;
-    transform: scale(1.1);
-}
-
-.san-pham .btn-sua-sp{
-    padding: 2px 30px;
-    background-color: #C89979;
-    box-shadow: inset 0 1.2em 0 0 rgb(255 255 255 / 10%);
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    border-radius: 5px;
-    border: 0;
-}
-
-.san-pham .btn-sua-sp:hover{
-    background-color: #997157;
-    cursor: pointer;
-    transition-duration: 1s;
-}
-
-.san-pham .btn-sua-sp:focus{
-    border: 0;
-    outline: none;
-}
-
-.san-pham .btn-xoa-sp:hover{
-    background-color: #997157;
-    cursor: pointer;
-    transition-duration: 1s;
-}
-
-.san-pham .btn-xoa-sp:focus{
-    border: 0;
-    outline: none;
-}
-
-.btn-cap-nhat-san-pham-sua{
-    margin: auto;
-    display: none;
-}
-
-#btnthem {
-    margin: auto;
-    margin-top: 30px;
-    display: block;
-}
-
-.container-left .form-them-sp .image-error {
-    color: red;
-    font-weight: 350;
-}
-
-.container-left .form-them-sp .name-error {
-    color: red;
-    font-weight: 350;  
-}
-
-.container-left .form-them-sp .brance-error {
-    color: red;
-    font-weight: 350;  
-}
-
-.container-left .form-them-sp .price-error {
-    color: red;
-    font-weight: 350;  
-}
-
-.page-number-warehouse {
-    margin-top: 40px;
-}
 
 
 
