--- a/src/page/cart-page/Delivery.css
+++ b/src/page/cart-page/Delivery.css
@@ -1,93 +1,120 @@
+/* @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic); */
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body, span{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 a{
-    text-decoration: none;
-    color: white;
+    text-decoration: none;   
 }
 
 ul{
     list-style: none;
 }
 
-/* Form đăng kí */
-.container-form-dang-ki {
-    background-color: #ddd;
-    padding-bottom: 20px;
+.delivery-showcase {
+    background-color: #F5F5F5;
+    min-height: 550px;
 }
 
-.form-dang-ki{
-    max-width: 30%;
-    margin: auto;
-    height: 560px;
+.Delivery-container {  
     padding-top: 30px;
-    /* bottom: 40px; */
+    display: grid;    
+    width: 65%;
+    margin: auto;
+    grid-gap: 20px;
+    grid-template-columns: 2fr 1fr;
 }
 
-.form-dang-ki .showcase-1{
-    background-color: white;    
+.form-input-user-info {
+    background-color: #ffffff;
+    padding: 20px 20px;
     border-radius: 5px;
-    padding: 30px 20px 0px 20px;    
+    height: 400px;
 }
 
-.form-dang-ki .title-form-dang-ki{
-    font-size: 20px;
-    color: #C89979;
-    font-weight: 600;
-    margin-bottom: 20px;
+.order-info-check-out {
+    background-color: #ffffff;
 }
 
-.form-dang-ki label, input{
-    display: block;
+.order-info-user {    
+    border-radius: 5px;        
 }
 
-.form-dang-ki .btn{
-    margin-bottom: 20px;
-    margin-top: 5px;
+.order-info-check-out {
+    padding: 20px 20px;
 }
 
-.form-dang-ki input{
-    width: 100%;
-    padding: 10px 10px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
+.form-input-order-info {
+    margin-top: 20px;
 }
 
-.form-dang-ki label{
+.price-delivery, .delivery-cost {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 5px 0;
+}
+
+.product-color-size-delivery {
     font-size: 14px;
-    font-weight: 450;
+    font-weight: 300;
+    margin: 5px 0;
 }
 
-.form-dang-ki input:focus{
-    border: 1px solid #C89979;
-    outline: none;
+.price-product-delivery, .delivery-cost-product {
+    text-align: right;
 }
 
-.form-dang-ki button{
-    padding: 10px 0;
+.total-price-product {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 20px;
+}
+
+.total-price-product-delivery {
+    text-align: right;
+    color: #717FE1;
+    font-weight: 600;
+}
+
+.btn-check-out-order {
+    margin-top: 15px;
+}
+
+.btn-check-out-order button {
     width: 100%;
-    color: white;
-    background-color: #C89979;
-    border: 0;
-    margin-bottom: 20px;
-    border-radius: 3px;
-    font-weight: 550;
+    padding: 12px 0;
+    background-color: #717FE1;
+    font-weight: 600;
+    font-size: 14px;
 }
 
-.form-dang-ki button:hover{
-    background-color: #997157;
-    transition-duration: 0.3s;
-    cursor: pointer;
+.btn-check-out-order button:hover {    
+    background-color: #8591ec;
 }
 
-.form-dang-ki button:focus{
-    border: 0;
-    outline: none;
+/* container-right */
+.product-list-delivery-info {
+    margin: 20px 0;
 }
+
+.product-name-delivery {
+    color: #4c4d4c;
+    font-weight: 600;
+    font-size: 14px;
+    font-family: sans-serif;
+}
+
+.title-price-product-delivery, .price-product-delivery, .title-delivery-cost, .delivery-cost-product {
+    font-weight: 400;
+    color: #555655;
+    font-size: 15px;    
+}
+
+.border-bottom-delivery {
+    border-bottom: 2px solid #E5E8EB;
+    margin-top: 30px;
+}
+
+
